# geometry

./: .cppcheck-suppressions  CMakeLists.txt  CONTRIBUTING.md  PROJECT_SUMMARY.md  README.md  build.sh
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: geometry-config.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  spatial_bench.cpp
include/: geom.hpp
include/geom/algorithms/: intersect.hpp  results.hpp
include/geom/core/: config.hpp  predicates.hpp
include/geom/primitives/: aabb.hpp  line.hpp  obb.hpp  plane.hpp  point.hpp  ray.hpp  segment.hpp  triangle.hpp
include/geom/spatial/: bvh.hpp  kdtree.hpp  octree.hpp
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  intersect.cpp
src/core/: CMakeLists.txt
src/primitives/: CMakeLists.txt  ray.cpp  triangle.cpp
src/spatial/: CMakeLists.txt
tests/: CMakeLists.txt  main_test_runner.cpp  test_intersect.cpp  test_intersect_gtest.cpp  test_intersect_main.cpp  test_primitives.cpp  test_primitives_gtest.cpp  test_primitives_main.cpp  test_segment_intersection_gtest.cpp  test_spatial_gtest.cpp
